--- a/index.html
+++ b/index.html
@@ -2,25 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Varun Brahma</title>
-
-    <!-- Local p5.js file -->
-    <script src="file:///Users/varun/Downloads/p5/p5.js"></script>
+    <title>Varun Brahm</title>
 </head>
 <body>
-    <h1>Varun Brahma</h1>
+    <h1>Varun Brahm</h1>
     <p>Welcome to my website.</p>
-
-    <script>
-        function setup() {
-            createCanvas(400, 200);
-        }
-
-        function draw() {
-            background(220);
-            textSize(24);
-            text("Hello from p5.js", 50, 100);
-        }
-    </script>
 </body>
 </html>
