Update title from 'Varun Brahm' to 'Varun Brahma'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Varun Brahm</title>
+    <title>Varun Brahma</title>
 </head>
 <body>
     <h1>Varun Brahm</h1>
