--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <title>Varun Brahma</title>
 </head>
 <body>
-    <h1>Varun Brahm</h1>
-    <p>Welcome to my website.</p>
+    <h1>Varun Brahma</h1>
+    <p>Welcome to my website.
+    I am a student at <a href = "https://www.usfca.edu"> USF </a> </p>
+    <ul>
+        A2 project
+        Bar chart
+        Dot plot
+    </ul>
 </body>
 </html>
