Modify welcome message in index.html
Updated paragraph content to remove welcome message.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
     <h1>Varun Brahma</h1>
-    <p>Welcome to my website.
-    I am a student at <a href = "https://www.usfca.edu"> USF </a> </p>
+    <p>I am a student at <a href = "https://www.usfca.edu/"> USF </a> </p>
     <ul>
         A2 project
         Bar chart
