Update index.html for improved formatting and links

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 </head>
 <body>
     <h1>Varun Brahma</h1>
-    <p>I am a student at <a href = "https://www.usfca.edu/"> USF </a> </p>
+
+    <p>
+        I am a student at 
+        <a href="https://www.usfca.edu/" target="_blank">USF</a>.
+    </p>
+
+    <h2>Projects</h2>
     <ul>
-        A2 project
-        Bar chart
-        Dot plot
+        <li>A2 Project</li>
+        <li>Bar Chart</li>
+        <li>Dot Plot</li>
     </ul>
 </body>
 </html>
