Refactor index.html structure and add links

--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Varun Brahma</title>
+  <meta charset="UTF-8">
+  <title>Varun Brahma</title>
 </head>
 <body>
-    <h1>Varun Brahma</h1>
 
-    <p>
-        I am a student at 
-        <a href="https://www.usfca.edu/" target="_blank">USF</a>.
-    </p>
+  <h1>Varun Brahma</h1>
 
-    <h2>Projects</h2>
-    <ul>
-        <li>A2 Project</li>
-        <li>Bar Chart</li>
-        <li>Dot Plot</li>
-    </ul>
+  <h2>Projects</h2>
+
+  <h3>Assignment 2</h3>
+  <ul>
+    <li><a href="a2/bar.html">Bar Chart</a></li>
+    <li><a href="a2/dot.html">Dot Plot</a></li>
+    <li><a href="a2/heatmap.html">Heatmap</a></li>
+  </ul>
+
 </body>
 </html>
