--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Varun Brahma</title>
+  <title>Assignment 2</title>
 </head>
 <body>
 
-  <h1>Varun Brahma</h1>
+  <h1>Assignment 2 – Visualizing Amounts using p5</h1>
 
-  <h2>Projects</h2>
+  <p>
+    This assignment explores visualizing a single quantitative variable using
+    bar charts, dot plots, and heatmaps created with p5.js and Tableau.
+  </p>
 
-  <h3>Assignment 2</h3>
   <ul>
-    <li><a href="a2/bar.html">Bar Chart</a></li>
-    <li><a href="a2/dot.html">Dot Plot</a></li>
-    <li><a href="a2/heatmap.html">Heatmap</a></li>
+    <li><a href="bar.html">Bar Chart</a></li>
+    <li><a href="dot.html">Dot Plot</a></li>
+    <li><a href="heatmap.html">Heatmap</a></li>
   </ul>
+
+  <p><a href="../index.html">← Back to homepage</a></p>
 
 </body>
 </html>
