--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Assignment 2</title>
-</head>
-<body>
+<html>
+  <head>
+    <title>Varun Brahma</title>
+  </head>
+  <body>
+    <h1>Varun Brahma</h1>
 
-  <h1>Assignment 2 – Visualizing Amounts using p5</h1>
+    <h2>Projects</h2>
 
-  <p>
-    This assignment explores visualizing a single quantitative variable using
-    bar charts, dot plots, and heatmaps created with p5.js and Tableau.
-  </p>
-
-  <ul>
-    <li><a href="bar.html">Bar Chart</a></li>
-    <li><a href="dot.html">Dot Plot</a></li>
-    <li><a href="heatmap.html">Heatmap</a></li>
-  </ul>
-
-  <p><a href="../index.html">← Back to homepage</a></p>
-
-</body>
+    <h3>Assignment 2 – Visualizing Amounts</h3>
+    <ul>
+      <li><a href="a2/bar.html">Bar Chart</a></li>
+      <li><a href="a2/dot.html">Dot Plot</a></li>
+      <li><a href="a2/heatmap.html">Heatmap</a></li>
+    </ul>
+  </body>
 </html>
