Update image source for Tableau screenshot

--- a/a2/dot.html
+++ b/a2/dot.html
@@ -38,7 +38,7 @@
 
     <h2>Tableau Screenshot</h2>
     <!-- Put your Tableau screenshot in /a2/ and rename it to dot_tableau.png -->
-    <img src="dot_tableau.png" alt="Dot Plot – Total Sales by Brand (Tableau)" />
+    <img src="dot.png" alt="Dot Plot – Total Sales by Brand (Tableau)" />
 
     <h2>p5.js Dot Plot</h2>
     <div id="sketch-holder"></div>
