Update headings and captions in heatmap.html

--- a/a2/heatmap.html
+++ b/a2/heatmap.html
@@ -38,14 +38,17 @@
   </head>
 
   <body>
-    <h1>p5.js Heatmap</h1>
-    <p class="sub">Monthly Sales Intensity by Category (color = Total Sales)</p>
+  <h1>Heatmap Visualization</h1>
+  <p class="sub">Monthly Sales Intensity by Category</p>
 
-    <div id="sketch-holder"></div>
+  <h2>p5.js Heatmap</h2>
+  <div id="sketch-holder"></div>
 
-    <img src="heatmap.png" alt="Tableau Heatmap Screenshot" />
-    <div class="caption">Tableau screenshot: heatmap.png</div>
+  <h2>Tableau Heatmap</h2>
+  <img src="heatmap.png" alt="Tableau Heatmap Screenshot" />
+  <div class="caption">Tableau screenshot: Monthly Sales Intensity by Category</div>
 
-    <script src="heatmap.js"></script>
-  </body>
+  <script src="heatmap.js"></script>
+</body>
+
 </html>
