Update index.html for improved structure and content

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Varun Brahma</title>
-  </head>
-  <body>
-    <h1>Varun Brahma</h1>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Varun Brahma — Data Visualization</title>
+</head>
+<body>
 
-    <h2>Projects</h2>
+  <h1>Varun Brahma — Data Visualization</h1>
 
-    <h3>Assignment 2 – Visualizing Amounts</h3>
-    <ul>
-      <li><a href="a2/bar.html">Bar Chart</a></li>
-      <li><a href="a2/dot.html">Dot Plot</a></li>
-      <li><a href="a2/heatmap.html">Heatmap</a></li>
-    </ul>
-  </body>
+  <h2>Assignments</h2>
+  <ul>
+    <li>
+      <a href="A2/index.html">A2 — Visualizing Amounts</a>
+    </li>
+    <li>
+      <a href="A3/index.html">A3 — Visualizing Distributions</a>
+    </li>
+  </ul>
+
+</body>
 </html>
