Fix link case sensitivity in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2>Assignments</h2>
   <ul>
     <li>
-      <a href="A2/index.html">A2 — Visualizing Amounts</a>
+      <a href="a2/index.html">A2 — Visualizing Amounts</a>
     </li>
     <li>
       <a href="A3/index.html">A3 — Visualizing Distributions</a>
