Update titles and links in index.html

--- a/A3/index.html
+++ b/A3/index.html
@@ -2,26 +2,28 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>A3</title>
+  <title>A3 - Distributions</title>
 </head>
 <body>
   <h1>A3 — Distributions</h1>
 
-  <h2>Seaborn</h2>
+  <h2>Seaborn Charts</h2>
   <ul>
-    <li><a href="seaborn_histogram.html">Seaborn Histogram</a></li>
-    <li><a href="seaborn_boxplot.html">Seaborn Box Plot (outliers highlighted)</a></li>
-    <li><a href="seaborn_stripplot.html">Seaborn Strip Plot</a></li>
+    <li><a href="seaborn_histogram.html">Histogram (Seaborn)</a></li>
+    <li><a href="seaborn_boxplot.html">Box Plot (Seaborn)</a></li>
+    <li><a href="seaborn_stripplot.html">Strip Plot (Seaborn)</a></li>
   </ul>
 
-  <h2>Interactive</h2>
+  <h2>Interactive Charts </h2>
   <ul>
-    <li><a href="p5_histogram.html">Interactive Histogram (tooltips)</a></li>
-    <li><a href="p5_boxplot.html">Interactive Box Plot (outliers highlighted + tooltips)</a></li>
-    <li><a href="p5_stripplot.html">Interactive Strip Plot (tooltips)</a></li>
-    <li><a href="p5_ecdf.html">ECDF </a></li>
+    <li><a href="p5_histogram.html">Histogram (Interactive)</a></li>
+    <li><a href="p5_boxplot.html">Box Plot (Interactive)</a></li>
+    <li><a href="p5_stripplot.html">Strip Plot (Interactive)</a></li>
+    <li><a href="p5_ecdf.html">ECDF (Interactive)</a></li>
   </ul>
 
   <p>CSV: <a href="data/Online-eCommerce_A3_clean.csv">Download</a></p>
+
+  <p><a href="../index.html">Back to homepage</a></p>
 </body>
 </html>
