Remove 'A+' from the box plot title

--- a/A3/p5_boxplot.html
+++ b/A3/p5_boxplot.html
@@ -7,7 +7,7 @@
   <script src="js/boxplot_tooltip.js"></script>
 </head>
 <body>
-  <h1>Interactive Box Plot (A+)</h1>
+  <h1>Interactive Box Plot</h1>
   <p>Outliers are highlighted; hover a red point for its value.</p>
 </body>
 </html>
