Remove 'Extra Credit' from ECDF heading

--- a/A3/p5_ecdf.html
+++ b/A3/p5_ecdf.html
@@ -7,7 +7,7 @@
   <script src="js/ecdf_tooltip.js"></script>
 </head>
 <body>
-  <h1>ECDF (Extra Credit)</h1>
+  <h1>ECDF</h1>
   <p>Hover near the curve to see x and F(x).</p>
 </body>
 </html>
