Remove 'A+' from histogram title

--- a/A3/p5_histogram.html
+++ b/A3/p5_histogram.html
@@ -7,7 +7,7 @@
   <script src="js/histogram_tooltip.js"></script>
 </head>
 <body>
-  <h1>Interactive Histogram (A+)</h1>
+  <h1>Interactive Histogram</h1>
   <p>Hover bars to see bin range and count.</p>
 </body>
 </html>
