Remove 'Extra Credit' from strip plot title

--- a/A3/p5_stripplot.html
+++ b/A3/p5_stripplot.html
@@ -7,7 +7,7 @@
   <script src="js/stripplot_tooltip.js"></script>
 </head>
 <body>
-  <h1>Interactive Strip Plot (Extra Credit)</h1>
+  <h1>Interactive Strip Plot</h1>
   <p>Hover points to see category and value.</p>
 </body>
 </html>
