Add link to A4 assignment in index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
   <h2>Assignments</h2>
   <ul>
     <li>
-      <a href="a2/index.html">A2 — Visualizing Amounts</a>
+      <a href="A2/index.html">A2 — Visualizing Amounts</a>
     </li>
     <li>
       <a href="A3/index.html">A3 — Visualizing Distributions</a>
+    </li>
+    <li>
+      <a href="A4/index.html">A4 — Introduction to D3</a>
     </li>
   </ul>
 
