Replace Boxplot link with Heatmap link in index.html

--- a/A4/index.html
+++ b/A4/index.html
@@ -14,7 +14,7 @@
 <ul>
   <li><a href="bar.html">Bar Chart in D3</a></li>
   <li><a href="scatter.html">Scatter Plot in D3</a></li>
-  <li><a href="boxplot.html">Boxplot in D3</a></li>
+  <li><a href="heatmap.html">Heatmap in D3</a></li>
   <li><a href="histogram.html">Histogram in D3</a></li>
 </ul>
 
